[project]
name = "tengoku"
version = "0.0.1"
authors = [
    { name = "Textea Inc.", email = "bao@textea.co" }
]
description = "Funix cloud tool"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["funix", "cloud"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Framework :: FastAPI"
]
dependencies = [
    "requests>=2.31.0",
    "fire>=0.5.0",
    "rich>=13.5.2"
]

[project.urls]
homepage = "https://cloud.funix.io"

[project.scripts]
tengoku = "tengoku.__init__:start"
